hphp/hack/test/typecheck/function_pointer/class_meth_fcfp_abstract.php.exp
File "class_meth_fcfp_abstract.php", line 8, characters 13-15:
Cannot call `Foo::bar()`; it is abstract (Typing[4073])
File "class_meth_fcfp_abstract.php", line 4, characters 35-37:
Declaration is here
